test/interaction/HighlightPositivity.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-highlight-add-annotations 'nil '(1 7 (keyword) t) '(28 33 (keyword) t) '(35 39 (keyword) t) '(42 43 (symbol) t) '(48 53 (keyword) t) '(60 61 (symbol) t) '(62 63 (symbol) t) '(65 67 (symbol) t) '(69 70 (symbol) t) '(71 73 (symbol) t) '(77 81 (keyword) t) '(84 85 (symbol) t) '(90 94 (keyword) t) '(97 98 (symbol) t) '(104 108 (keyword) t) '(111 116 (keyword) t) '(123 124 (symbol) t) '(125 126 (symbol) t) '(128 130 (symbol) t) '(132 133 (symbol) t) '(134 136 (symbol) t) '(140 144 (keyword) t) '(147 152 (keyword) t) '(159 160 (symbol) t) '(163 165 (symbol) t) '(169 175 (keyword) t) '(178 179 (symbol) t) '(184 189 (keyword) t) '(192 201 (keyword) t) '(201 202 (symbol) t) '(203 218 (keyword) t) '(221 226 (keyword) t) '(236 237 (symbol) t) '(240 242 (symbol) t) '(251 252 (symbol) t) '(257 259 (symbol) t) '(271 272 (symbol) t) '(275 277 (symbol) t) '(281 285 (keyword) t) '(288 289 (symbol) t) '(294 299 (keyword) t) '(306 307 (symbol) t) '(315 317 (symbol) t) '(321 325 (keyword) t) '(328 329 (symbol) t) '(331 332 (symbol) t) '(337 339 (symbol) t) '(343 344 (symbol) t) '(345 346 (symbol) t) '(351 356 (keyword) t) '(363 364 (symbol) t) '(367 368 (symbol) t) '(371 372 (symbol) t) '(373 375 (symbol) t) '(381 385 (keyword) t) '(386 392 (keyword) t) '(412 416 (keyword) t) '(420 421 (symbol) t) '(429 430 (symbol) t) '(436 438 (symbol) t) '(444 448 (keyword) t) '(452 457 (keyword) t) '(465 466 (symbol) t) '(467 468 (symbol) t) '(471 472 (symbol) t) '(478 480 (symbol) t) '(494 495 (symbol) t) '(509 510 (symbol) t) '(514 516 (symbol) t) '(523 527 (keyword) t) '(528 534 (keyword) t) '(558 562 (keyword) t) '(565 566 (symbol) t) '(571 576 (keyword) t) '(583 584 (symbol) t) '(585 586 (symbol) t) '(589 590 (symbol) t) '(595 596 (symbol) t) '(596 597 (symbol) t) '(598 599 (symbol) t) '(601 602 (symbol) t) '(604 605 (symbol) t) '(606 607 (symbol) t) '(609 610 (symbol) t) '(611 613 (symbol) t) '(616 645 (comment) t) '(685 713 (comment) t))
(agda2-highlight-add-annotations 'nil '(1 7 (keyword) t) '(8 27 (module) nil nil ("HighlightPositivity.agda" . 1)) '(28 33 (keyword) t) '(40 41 (datatype) nil nil ("HighlightPositivity.agda" . 40)) '(44 47 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(56 59 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 56)) '(63 64 (datatype) nil nil ("HighlightPositivity.agda" . 40)) '(68 69 (datatype) nil nil ("HighlightPositivity.agda" . 40)) '(74 75 (datatype) nil nil ("HighlightPositivity.agda" . 40)) '(82 83 (datatype) nil nil ("HighlightPositivity.agda" . 82)) '(86 89 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(95 96 (datatype) nil nil ("HighlightPositivity.agda" . 95)) '(99 102 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(109 110 (datatype) nil nil ("HighlightPositivity.agda" . 82)) '(119 122 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 119)) '(126 127 (datatype) nil nil ("HighlightPositivity.agda" . 95)) '(131 132 (datatype) nil nil ("HighlightPositivity.agda" . 82)) '(137 138 (datatype) nil nil ("HighlightPositivity.agda" . 82)) '(145 146 (datatype) nil nil ("HighlightPositivity.agda" . 95)) '(155 158 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 155)) '(161 162 (datatype) nil nil ("HighlightPositivity.agda" . 82)) '(166 167 (datatype) nil nil ("HighlightPositivity.agda" . 95)) '(176 177 (record) nil nil ("HighlightPositivity.agda" . 176)) '(180 183 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(231 235 (field) nil nil ("HighlightPositivity.agda" . 231)) '(238 239 (record) nil nil ("HighlightPositivity.agda" . 176)) '(243 244 (record) nil nil ("HighlightPositivity.agda" . 176)) '(246 250 (function) nil nil ("HighlightPositivity.agda" . 246)) '(253 256 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(260 263 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(264 268 (function) nil nil ("HighlightPositivity.agda" . 246)) '(269 270 (bound) nil nil ("HighlightPositivity.agda" . 269)) '(273 274 (bound) nil nil ("HighlightPositivity.agda" . 269)) '(278 279 (bound) nil nil ("HighlightPositivity.agda" . 269)) '(286 287 (datatype) nil nil ("HighlightPositivity.agda" . 286)) '(290 293 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(302 305 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 302)) '(308 312 (function) nil nil ("HighlightPositivity.agda" . 246)) '(313 314 (datatype) nil nil ("HighlightPositivity.agda" . 286)) '(318 319 (datatype) nil nil ("HighlightPositivity.agda" . 286)) '(326 327 (datatype) nil nil ("HighlightPositivity.agda" . 326)) '(329 330 (bound) nil nil ("HighlightPositivity.agda" . 329)) '(333 336 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(340 343 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(347 350 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(359 362 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 359)) '(365 366 (bound) nil nil ("HighlightPositivity.agda" . 329)) '(368 369 (datatype) nil nil ("HighlightPositivity.agda" . 326)) '(370 371 (bound) nil nil ("HighlightPositivity.agda" . 329)) '(376 377 (datatype) nil nil ("HighlightPositivity.agda" . 326)) '(378 379 (bound) nil nil ("HighlightPositivity.agda" . 329)) '(393 410 (module) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 1)) '(417 419 (datatype) nil nil ("HighlightPositivity.agda" . 417)) '(422 425 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(426 428 (function) nil nil ("HighlightPositivity.agda" . 426)) '(431 435 (datatype) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 173)) '(439 442 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(449 451 (datatype) nil nil ("HighlightPositivity.agda" . 417)) '(460 464 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 460)) '(469 470 (bound) nil nil ("HighlightPositivity.agda" . 469)) '(473 475 (function) nil nil ("HighlightPositivity.agda" . 426)) '(476 477 (bound) nil nil ("HighlightPositivity.agda" . 469)) '(481 483 (datatype) nil nil ("HighlightPositivity.agda" . 417)) '(485 487 (function) nil nil ("HighlightPositivity.agda" . 426)) '(488 493 (inductiveconstructor) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 192)) '(496 500 (datatype) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 173)) '(501 503 (function) nil nil ("HighlightPositivity.agda" . 426)) '(504 508 (inductiveconstructor) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 198)) '(511 513 (datatype) nil nil ("HighlightPositivity.agda" . 417)) '(517 521 (datatype) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 173)) '(535 556 (module) nil nil ("agda-default-include-path/Agda/Builtin/Equality.agda" . 1)) '(563 564 (datatype) nil nil ("HighlightPositivity.agda" . 563)) '(567 570 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(579 582 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 579)) '(587 588 (bound) nil nil ("HighlightPositivity.agda" . 587)) '(591 592 (bound) nil nil ("HighlightPositivity.agda" . 587)) '(593 594 (datatype operator) nil nil ("agda-default-include-path/Agda/Builtin/Equality.agda" . 150)) '(599 600 (bound) nil nil ("HighlightPositivity.agda" . 599)) '(603 604 (datatype) nil nil ("HighlightPositivity.agda" . 563)) '(608 609 (bound) nil nil ("HighlightPositivity.agda" . 599)) '(614 615 (datatype) nil nil ("HighlightPositivity.agda" . 563)))
(agda2-highlight-add-annotations 'nil '(40 41 (datatype) nil nil ("HighlightPositivity.agda" . 40)) '(42 43 (symbol) t) '(44 47 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)))
(agda2-highlight-add-annotations 'nil '(35 39 (keyword) t) '(40 41 (datatype) nil nil ("HighlightPositivity.agda" . 40)) '(48 53 (keyword) t) '(56 59 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 56)) '(60 61 (symbol) t) '(62 63 (symbol) t) '(63 64 (datatype) nil nil ("HighlightPositivity.agda" . 40)) '(65 67 (symbol) t) '(68 69 (datatype) nil nil ("HighlightPositivity.agda" . 40)) '(69 70 (symbol) t) '(71 73 (symbol) t) '(74 75 (datatype) nil nil ("HighlightPositivity.agda" . 40)))
(agda2-highlight-add-annotations 'nil '(40 41 (positivityproblem)) '(63 64 (positivityproblem)))
(agda2-highlight-add-annotations 'nil '(82 83 (datatype) nil nil ("HighlightPositivity.agda" . 82)) '(84 85 (symbol) t) '(86 89 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)))
(agda2-highlight-add-annotations 'nil '(95 96 (datatype) nil nil ("HighlightPositivity.agda" . 95)) '(97 98 (symbol) t) '(99 102 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)))
(agda2-highlight-add-annotations 'nil '(104 108 (keyword) t) '(109 110 (datatype) nil nil ("HighlightPositivity.agda" . 82)) '(111 116 (keyword) t) '(119 122 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 119)) '(123 124 (symbol) t) '(125 126 (symbol) t) '(126 127 (datatype) nil nil ("HighlightPositivity.agda" . 95)) '(128 130 (symbol) t) '(131 132 (datatype) nil nil ("HighlightPositivity.agda" . 82)) '(132 133 (symbol) t) '(134 136 (symbol) t) '(137 138 (datatype) nil nil ("HighlightPositivity.agda" . 82)))
(agda2-highlight-add-annotations 'nil '(140 144 (keyword) t) '(145 146 (datatype) nil nil ("HighlightPositivity.agda" . 95)) '(147 152 (keyword) t) '(155 158 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 155)) '(159 160 (symbol) t) '(161 162 (datatype) nil nil ("HighlightPositivity.agda" . 82)) '(163 165 (symbol) t) '(166 167 (datatype) nil nil ("HighlightPositivity.agda" . 95)))
(agda2-highlight-add-annotations 'nil '(109 110 (positivityproblem)) '(126 127 (positivityproblem)) '(161 162 (positivityproblem)))
(agda2-highlight-add-annotations 'nil '(126 127 (positivityproblem)) '(145 146 (positivityproblem)) '(161 162 (positivityproblem)))
(agda2-highlight-add-annotations 'nil '(176 177 (record) nil nil ("HighlightPositivity.agda" . 176)) '(178 179 (symbol) t) '(180 183 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)))
(agda2-highlight-add-annotations 'nil '(169 175 (keyword) t) '(176 177 (record) nil nil ("HighlightPositivity.agda" . 176)) '(184 189 (keyword) t) '(192 201 (keyword) t) '(201 202 (symbol) t) '(203 218 (keyword) t) '(221 226 (keyword) t) '(231 235 (field) nil nil ("HighlightPositivity.agda" . 231)) '(236 237 (symbol) t) '(238 239 (record) nil nil ("HighlightPositivity.agda" . 176)) '(240 242 (symbol) t) '(243 244 (record) nil nil ("HighlightPositivity.agda" . 176)))
(agda2-highlight-add-annotations 'nil '(176 177 (positivityproblem)) '(238 239 (positivityproblem)))
(agda2-highlight-add-annotations 'nil '(246 250 (function) nil nil ("HighlightPositivity.agda" . 246)) '(253 256 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(260 263 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)))
(agda2-highlight-add-annotations 'nil '(246 250 (function) nil nil ("HighlightPositivity.agda" . 246)) '(264 268 (function) nil nil ("HighlightPositivity.agda" . 246)) '(269 270 (bound) nil nil ("HighlightPositivity.agda" . 269)) '(271 272 (symbol) t) '(273 274 (bound) nil nil ("HighlightPositivity.agda" . 269)) '(275 277 (symbol) t) '(278 279 (bound) nil nil ("HighlightPositivity.agda" . 269)))
(agda2-highlight-add-annotations 'nil '(286 287 (datatype) nil nil ("HighlightPositivity.agda" . 286)) '(288 289 (symbol) t) '(290 293 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)))
(agda2-highlight-add-annotations 'nil '(281 285 (keyword) t) '(286 287 (datatype) nil nil ("HighlightPositivity.agda" . 286)) '(294 299 (keyword) t) '(302 305 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 302)) '(306 307 (symbol) t) '(308 312 (function) nil nil ("HighlightPositivity.agda" . 246)) '(313 314 (datatype) nil nil ("HighlightPositivity.agda" . 286)) '(315 317 (symbol) t) '(318 319 (datatype) nil nil ("HighlightPositivity.agda" . 286)))
(agda2-highlight-add-annotations 'nil '(286 287 (positivityproblem)) '(313 314 (positivityproblem)))
(agda2-highlight-add-annotations 'nil '(326 327 (datatype) nil nil ("HighlightPositivity.agda" . 326)) '(328 329 (symbol) t) '(329 330 (bound) nil nil ("HighlightPositivity.agda" . 329)) '(331 332 (symbol) t) '(333 336 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(337 339 (symbol) t) '(340 343 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)) '(343 344 (symbol) t) '(345 346 (symbol) t) '(347 350 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)))
(agda2-highlight-add-annotations 'nil '(321 325 (keyword) t) '(326 327 (datatype) nil nil ("HighlightPositivity.agda" . 326)) '(329 330 (bound) nil nil ("HighlightPositivity.agda" . 329)) '(351 356 (keyword) t) '(359 362 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 359)) '(363 364 (symbol) t) '(365 366 (bound) nil nil ("HighlightPositivity.agda" . 329)) '(367 368 (symbol) t) '(368 369 (datatype) nil nil ("HighlightPositivity.agda" . 326)) '(370 371 (bound) nil nil ("HighlightPositivity.agda" . 329)) '(371 372 (symbol) t) '(373 375 (symbol) t) '(376 377 (datatype) nil nil ("HighlightPositivity.agda" . 326)) '(378 379 (bound) nil nil ("HighlightPositivity.agda" . 329)))
(agda2-highlight-add-annotations 'nil '(326 327 (positivityproblem)) '(368 369 (positivityproblem)))
(agda2-highlight-add-annotations 'nil '(381 385 (keyword) t) '(386 392 (keyword) t) '(393 410 (module) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 1)))
(agda2-highlight-add-annotations 'nil '(417 419 (datatype) nil nil ("HighlightPositivity.agda" . 417)) '(420 421 (symbol) t) '(422 425 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)))
(agda2-highlight-add-annotations 'nil '(426 428 (function) nil nil ("HighlightPositivity.agda" . 426)) '(431 435 (datatype) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 173)) '(439 442 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)))
(agda2-highlight-add-annotations 'nil '(444 448 (keyword) t) '(449 451 (datatype) nil nil ("HighlightPositivity.agda" . 417)) '(452 457 (keyword) t) '(460 464 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 460)) '(465 466 (symbol) t) '(467 468 (symbol) t) '(469 470 (bound) nil nil ("HighlightPositivity.agda" . 469)) '(471 472 (symbol) t) '(473 475 (function) nil nil ("HighlightPositivity.agda" . 426)) '(476 477 (bound) nil nil ("HighlightPositivity.agda" . 469)) '(478 480 (symbol) t) '(481 483 (datatype) nil nil ("HighlightPositivity.agda" . 417)))
(agda2-highlight-add-annotations 'nil '(426 428 (function) nil nil ("HighlightPositivity.agda" . 426)) '(485 487 (function) nil nil ("HighlightPositivity.agda" . 426)) '(488 493 (inductiveconstructor) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 192)) '(494 495 (symbol) t) '(496 500 (datatype) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 173)) '(501 503 (function) nil nil ("HighlightPositivity.agda" . 426)) '(504 508 (inductiveconstructor) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 198)) '(509 510 (symbol) t) '(511 513 (datatype) nil nil ("HighlightPositivity.agda" . 417)) '(514 516 (symbol) t) '(517 521 (datatype) nil nil ("agda-default-include-path/Agda/Builtin/Bool.agda" . 173)))
(agda2-highlight-add-annotations 'nil '(449 451 (positivityproblem)) '(473 475 (positivityproblem)) '(511 513 (positivityproblem)))
(agda2-highlight-add-annotations 'nil '(523 527 (keyword) t) '(528 534 (keyword) t) '(535 556 (module) nil nil ("agda-default-include-path/Agda/Builtin/Equality.agda" . 1)))
(agda2-highlight-add-annotations 'nil '(563 564 (datatype) nil nil ("HighlightPositivity.agda" . 563)) '(565 566 (symbol) t) '(567 570 (primitive) nil nil ("agda-default-include-path/Agda/Primitive.agda" . 388)))
(agda2-highlight-add-annotations 'nil '(558 562 (keyword) t) '(563 564 (datatype) nil nil ("HighlightPositivity.agda" . 563)) '(571 576 (keyword) t) '(579 582 (inductiveconstructor) nil nil ("HighlightPositivity.agda" . 579)) '(583 584 (symbol) t) '(585 586 (symbol) t) '(587 588 (bound) nil nil ("HighlightPositivity.agda" . 587)) '(589 590 (symbol) t) '(591 592 (bound) nil nil ("HighlightPositivity.agda" . 587)) '(593 594 (datatype operator) nil nil ("agda-default-include-path/Agda/Builtin/Equality.agda" . 150)) '(595 596 (symbol) t) '(596 597 (symbol) t) '(598 599 (symbol) t) '(599 600 (bound) nil nil ("HighlightPositivity.agda" . 599)) '(601 602 (symbol) t) '(603 604 (datatype) nil nil ("HighlightPositivity.agda" . 563)) '(604 605 (symbol) t) '(606 607 (symbol) t) '(608 609 (bound) nil nil ("HighlightPositivity.agda" . 599)) '(609 610 (symbol) t) '(611 613 (symbol) t) '(614 615 (datatype) nil nil ("HighlightPositivity.agda" . 563)))
(agda2-highlight-add-annotations 'nil '(563 564 (positivityproblem)) '(603 604 (positivityproblem)))
(agda2-highlight-add-annotations 'nil '(1 7 (keyword) t) '(8 27 (module) nil nil ("HighlightPositivity.agda" . 1)) '(28 33 (keyword) t))
(agda2-highlight-add-annotations 'nil '(77 81 (keyword) t) '(90 94 (keyword) t) '(251 252 (symbol) t) '(257 259 (symbol) t) '(412 416 (keyword) t) '(429 430 (symbol) t) '(436 438 (symbol) t) '(616 645 (comment) t) '(685 713 (comment) t))
(agda2-status-action "")
(agda2-info-action "*All Errors*" "HighlightPositivity.agda:3.1-4.22: error: [NotStrictlyPositive] A is not strictly positive, because it occurs to the left of an arrow in the type of the constructor inA in the definition of A. HighlightPositivity.agda:6.6-13.15: error: [NotStrictlyPositive] B is not strictly positive, because it occurs in the type of the constructor inC in the definition of C, which occurs to the left of an arrow in the type of the constructor inB in the definition of B. HighlightPositivity.agda:6.6-13.15: error: [NotStrictlyPositive] C is not strictly positive, because it occurs to the left of an arrow in the type of the constructor inB in the definition of B, which occurs in the type of the constructor inC in the definition of C. HighlightPositivity.agda:15.1-18.18: error: [NotStrictlyPositive] D is not strictly positive, because it occurs to the left of an arrow in the definition of D. HighlightPositivity.agda:23.1-24.20: error: [NotStrictlyPositive] E is not strictly positive, because it occurs to the left of an arrow in the type of the constructor inE in the definition of E. HighlightPositivity.agda:26.1-27.23: error: [NotStrictlyPositive] F is not strictly positive, because it occurs in an argument of a bound variable at position 0 which uses its argument with polarity * in the type of the constructor inF in the definition of F. HighlightPositivity.agda:31.6-38.21: error: [NotStrictlyPositive] GU is not strictly positive, because it occurs to the left of an arrow in the second clause in the definition of GT, which occurs in the type of the constructor inGU in the definition of GU. HighlightPositivity.agda:42.1-43.39: error: [NotStrictlyPositive] H is not strictly positive, because it occurs to the left of an arrow in the type of the constructor inH in the definition of H." nil)
((last . 1) . (agda2-goals-action '()))
